Refactor the code by FindBugs.