@@ -349,6 +349,7 @@ class ResultIterator2 extends ResultIterator
 			}
 			catch ( Exception e )
 			{
+				//ignore
 			}
 		}
 	}
@@ -396,7 +397,7 @@ class ResultIterator2 extends ResultIterator
 	{
 		if ( rowIndex < 0 || rowIndex < this.currRowIndex )
 			throw new DataException( ResourceConstants.INVALID_ROW_INDEX,
-					new Integer( rowIndex ) );
+					Integer.valueOf( rowIndex ) );
 		else if ( rowIndex == currRowIndex )
 			return;
 
@@ -405,7 +406,7 @@ class ResultIterator2 extends ResultIterator
 		{
 			if ( this.next( ) == false )
 				throw new DataException( ResourceConstants.INVALID_ROW_INDEX,
-						new Integer( rowIndex ) );
+						Integer.valueOf( rowIndex ) );
 		}
 	}
 
